--- a/index - Copy.html
+++ b/index - Copy.html
@@ -90,45 +90,44 @@
       <h1 id="projects">Web Development Gallery</h1>
         <div class="img-area">
           <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
-            <img alt="Bootstrap Upgrade exmaple" class="project-image img-thumbnail example-img-size single-img" src="img/teamSpaceScenario.PNG" >
+            <img alt="Bootstrap Upgrade exmaple" class="project-image img-thumbnail example-img-size single-img" src="img/teamSpaceScenario.PNG" style="height:150px;">
             <a href="img/teamSpaceScenario.PNG" target="_blank" ><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
-            <p style="color:black;">SpaceView Bootstrap Upgrade 1</p>
+            <p style="color:black;">Bootstrap upgrade, creating a data table, room picker & side nav.</p>
           </div>
           <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
-            <img alt="Bootstrap Upgrade exmaple" class="project-image img-thumbnail example-img-size single-img" src="img/teamSpaceUpgrade.png" >
+            <img alt="Bootstrap Upgrade exmaple" class="project-image img-thumbnail example-img-size single-img" src="img/teamSpaceUpgrade.png" style="height:150px;">
             <a href="img/teamSpaceUpgrade.png" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
-            <p style="color:black;">SpaceView Bootstrap Upgrade 2</p>
+            <p style="color:black;">Bootstrap upgrade of legacy site, modernizing the layout.</p>
           </div>
           <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
-            <img alt="Bootstrap Upgrade exmaple" class="project-image img-thumbnail example-img-size single-img" src="img/sv5/room.png" >
+            <img alt="Bootstrap Upgrade exmaple" class="project-image img-thumbnail example-img-size single-img" src="img/sv5/room.png" style="height:150px;">
             <a href="img/sv5/room.png" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
-            <p style="color:black;">SpaceView Bootstrap Upgrade 3</p>
+            <p style="color:black;">Bootstrap upgrade of legacy site, modernizing the layout.</p>
           </div>  
-          <!--resize-->
           <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
-            <img alt="Bootstrap Upgrade exmaple" class="project-image img-thumbnail example-img-size single-img" src="img/sv5/buildings.png">
+            <img alt="Bootstrap Upgrade exmaple" class="project-image img-thumbnail example-img-size single-img" src="img/sv5/buildings.png" style="height:150px;">
             <a href="img/sv5/buildings.png" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
-            <p style="color:black;">SpaceView Bootstrap Upgrade 4</p>
+            <p style="color:black;">Bootstrap upgrade of legacy site, modernizing the layout.</p>
           </div>
           <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
-            <img alt="Portfolio Upgrade" class="project-image img-thumbnail example-img-size single-img" src="img/portfolioUpgrade.PNG" >
+            <img alt="Portfolio Upgrade" class="project-image img-thumbnail example-img-size single-img" src="img/portfolioUpgrade.PNG" style="height:150px;" >
             <a href="img/portfolioUpgrade.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
-            <p style="color:black;">Upgrading Portfolio 9/01/2020</p>
+            <p style="color:black;">Enhancing my portfolio around 9/01/2020.</p>
           </div>
           <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
-            <img alt="Portfolio Upgrade" class="project-image img-thumbnail example-img-size single-img" src="img/portfolioUpgrade2.PNG" >
+            <img alt="Portfolio Upgrade" class="project-image img-thumbnail example-img-size single-img" src="img/portfolioUpgrade2.PNG" style="height:150px;">
             <a href="img/portfolioUpgrade2.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
-            <p style="color:black;">Upgrading Portfolio 9/05/2020</p>
+            <p style="color:black;">Enhancing my portfolio around 9/05/2020.</p>
           </div>
           <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
-            <img alt="Portfolio Upgrade" class="project-image img-thumbnail example-img-size single-img" src="img/portfolioUpgrade3.PNG" >
+            <img alt="Portfolio Upgrade" class="project-image img-thumbnail example-img-size single-img" src="img/portfolioUpgrade3.PNG" style="height:150px;">
             <a href="img/portfolioUpgrade3.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
-            <p style="color:black;">Upgrading Portfolio 9/15/2020</p>  
+            <p style="color:black;">Enhancing my portfolio around 9/15/2020.</p>  
           </div>
           <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
-            <img alt="Portfolio Upgrade" class="project-image img-thumbnail example-img-size single-img" src="img/portfolioUpgrade4.PNG" >
+            <img alt="Portfolio Upgrade" class="project-image img-thumbnail example-img-size single-img" src="img/portfolioUpgrade4.PNG" style="height:150px;">
             <a href="img/portfolioUpgrade4.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
-              <p style="color:black;">Upgrading Portfolio 9/20/2020</p>
+              <p style="color:black;">Enhancing my portfolio around 9/20/2020.</p>
           </div>
         </div>
         <!--End of web Development work -->
@@ -138,34 +137,34 @@
           <h1 id="autocad">CAD | Revit | Other Gallery</h1>
             <div class="img-area">
               <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
-                <img alt="Polyline example 1" class="project-image img-thumbnail example-img-size single-img" src="img/plines.PNG" >
+                <img alt="Polyline example 1" class="project-image img-thumbnail example-img-size single-img" src="img/plines.PNG" style="height:150px;">
                 <a href="img/plines.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
-                <p style="color:black;">AutoCAD Polylines 1</p>
+                <p style="color:black;">CAD drawing cleanup and polylining 25,000 sq ft.</p>
               </div>
               <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
-                <img alt="Polyline example 2" class="project-image img-thumbnail example-img-size single-img" src="img/plines2.PNG">
+                <img alt="Polyline example 2" class="project-image img-thumbnail example-img-size single-img" src="img/plines2.PNG" style="height:150px;">
                 <a href="img/plines2.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
-                <p style="color:black;">AutoCAD Polylines 2</p>
+                <p style="color:black;">CAD drawing cleanup and polylining 25,000 sq ft.</p>
               </div>
               <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
-                <img alt="Polyline example 2" class="project-image img-thumbnail example-img-size single-img" src="img/cad/25k_with_category.PNG">
+                <img alt="Polyline example 2" class="project-image img-thumbnail example-img-size single-img" src="img/cad/25k_with_category.PNG" style="height:150px;">
                 <a href="img/cad/25k_with_category.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
-                <p style="color:black;">AutoCAD Room Category assignment</p>
+                <p style="color:black;">AutoCAD Room Type & Category assignments for ARCHIBUS.</p>
               </div>
               <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
-                <img alt="Sample Revit model home" class="project-image img-thumbnail example-img-size single-img" src="img/getting_started_01.PNG" >
+                <img alt="Sample Revit model home" class="project-image img-thumbnail example-img-size single-img" src="img/getting_started_01.PNG" style="height:150px;">
                 <a href="img/getting_started_01.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
-                <p style="color:black;">Revit Home Model</p>
+                <p style="color:black;">Revit example home model.</p>
               </div>
               <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
-                <img alt="Excel Direct Connect Report" class="project-image img-thumbnail example-img-size single-img" src="img/exceldc.PNG" >
+                <img alt="Excel Direct Connect Report" class="project-image img-thumbnail example-img-size single-img" src="img/exceldc.PNG" style="height:150px;">
                 <a href="img/exceldc.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
-                <p style="color:black;">Excel Direct Connect Report</p>
+                <p style="color:black;">Excel Direct Connect Report created for an RSC client.</p>
               </div>
               <div class="single-img zoom" style="background-color:#f8f8ff; border-radius: 25px; margin-top: 30px; height: 260px; width: 320px;">
-                <img alt="Aquarium" class="project-image img-thumbnail example-img-size single-img" src="img/aq.PNG" >
+                <img alt="Aquarium" class="project-image img-thumbnail example-img-size single-img" src="img/aq.PNG" style="height:150px;">
                 <a href="img/aq.PNG" target="_blank"><p style="color:black;"><span class="btn btn-success btn-sm zoombtn">View</span></p></a>
-                <p style="color:black; word-wrap: break-word;">Annual RSC Company Presentation</p>
+                <p style="color:black; word-wrap: break-word;">Slide from the annual RSC Company Presentation.</p>
               </div>
             </div>       
           <!-- card end-->
