--- a/index - Copy.html
+++ b/index - Copy.html
@@ -93,7 +93,7 @@
         <h1 id="about">About</h1>
         <div class="text-area-div">
           <h4 class="text-area" style="color:white;">
-            For the last 2+ years I have worn many hats while working for Robert Stephen Consulting. 
+            For the last 2 years I have worn many hats while working for Robert Stephen Consulting. 
             I’ve been able to get my hands on technologies such as Bootstrap, HTML5, CSS3, JavaScript, jQuery, AutoCAD, Revit, ARCHIBUS, SpaceView and numerous others that I hadn't heard of prior to my experience here. 
           </h4>  
           <br>
