--- a/index - Copy.html
+++ b/index - Copy.html
@@ -100,7 +100,7 @@
           <br>
           <h4 class="text-area"style="color:white; margin-left: 5px; margin-right: 5px;">
             Hired as an IWMS Administrator, I quickly transitioned to a CAD Drafter/Specialist within a few months after one of our top employees in the CAD department moved across the country with his family. 
-            I eventually grew into a Frontend web development role creating Bootstrap web pages with HTML, CSS, JavaScript & jQuery, and have really fallen in love with web design and development ever since. I plan to continue my growth and earn more certifications.
+            I eventually grew into a front end web development role creating Bootstrap web pages with HTML, CSS, JavaScript & jQuery, and have really fallen in love with web design and development ever since. I plan to continue my growth and earn more certifications.
           </h4>  
         </div>
         <br /><br /><br />
